test/scc/ext/tm/semantic-errors/002.t
void test()
{
    goto label;
    _Atomic
    {
        label:
            ;
    }
}